--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "deploy": "gh-pages -d dist"
   },
   "homepage": "https://galayba-stack.github.io/portfolio.dev",
-
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
@@ -46,6 +45,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.95.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
